--- a/index.html
+++ b/index.html
@@ -1,124 +1,134 @@
 <html>
 <head>
-	<title>Tinta de Pulpo</title>
+	<title>Octopus Ink</title>
 </head>
-<style type="text/css">
+<link rel="stylesheet" href="css/cssstyles.css">
 
-body{
+<script type="text/javascript" src="lib/jquery-1.11.2.js"></script>
+<script>
+$(window).load(function(){
+		var pages = $('#slideShowContainer li'), current=0;
+		var currentPage,nextPage;
+		var timeoutID;
+		var buttonClicked=0;
 
-	background-color: silver
-}
+		var handler1=function(){
+			buttonClicked=1;
+			$('#slideShowContainer .button').unbind('click');
+			currentPage= pages.eq(current);
+			if($(this).hasClass('prevButton'))
+			{
+				if (current <= 0)
+					current=pages.length-1;
+				else
+					current=current-1;
+				nextPage = pages.eq(current);	
 
-#ContenedorExterior{
-	border:3px solid black;
-	width:600;
-	height:660;
-	background-color:#162EAE;
-	margin: 0 auto;
-}
-#TituloPrincipal{
-	text-align: center;
-	 font-size: 250%
+				nextPage.css("marginLeft",-604);
+				nextPage.show();
+				nextPage.animate({ marginLeft: 0 }, 800,function(){
+					currentPage.hide();
+				});
+				currentPage.animate({ marginLeft: 604 }, 800,function(){
+					$('#slideShowContainer .button').bind('click',handler1);
+				});
+			}
+			else
+			{
 
-}
+				if (current >= pages.length-1)
+					current=0;
+				else
+					current=current+1;
+				nextPage = pages.eq(current);	
 
-#contenedorPrincipal {
+				nextPage.css("marginLeft",604);
+				nextPage.show();
+				nextPage.animate({ marginLeft: 0 }, 800,function(){
+				});
+				currentPage.animate({ marginLeft: -604 }, 800,function(){
+					currentPage.hide();
+					$('#slideShowContainer .button').bind('click',handler1);
+				});
+			}		
+		}
 
-background-color:silver;
- width: 1080px;
-height: 700px
+		var handler2=function(){
+			if (buttonClicked==0)
+			{
+			$('#slideShowContainer .button').unbind('click');
+			currentPage= pages.eq(current);
+			if (current >= pages.length-1)
+				current=0;
+			else
+				current=current+1;
+			nextPage = pages.eq(current);	
+			nextPage.css("marginLeft",604);
+			nextPage.show();
+			nextPage.animate({ marginLeft: 0 }, 800,function(){
+			});
+			currentPage.animate({ marginLeft: -604 }, 800,function(){
+				currentPage.hide();
+				$('#slideShowContainer .button').bind('click',handler1);
+			});
+			timeoutID=setTimeout(function(){
+				handler2();	
+			}, 4000);
+			}
+		}
 
-}
-#marcoSuperior{
-border:2px solid black
-;height: 100px;
- background-color:#485ED7
+		$('#slideShowContainer .button').click(function(){
+			clearTimeout(timeoutID);
+			handler1();
+		});
 
-}
-#ContenedorDeSecciones{
-border:2px solid black;width: 150px; height: 400px; background-color:#485ED7; float: left
-
-}
-#ContenedorTexto{
-
-	color: #FFFFFF;
-	 background-color:#001457;
-	 font-size:20px
-}
-#ContenedorInferior{
-background-color:black;
-
-height: 100px
-
-}
-
-
-
-</style>
-<script type="text/javascript" src="jquery-1.11.2.js"></script>
-
-<script type="text/javascript">
-$(document).ready(function(){
-
-	console.log("cargado js");
+		timeoutID=setTimeout(function(){
+			handler2();	
+			}, 4000);
+		
 });
 
-
 </script>
-
 <body>
 
+	<div id = "contenedorPrincipal">
 
+		<div id = "marcoSuperior">
 
-<div id = "contenedorPrincipal">
+			<h1 id ="TituloPrincipal">Octopus Ink</h1>
 
-	<div id = "marcoSuperior">
-		
-		<h1 id ="TituloPrincipal">Tinta de Pulpo</h1>
-		
-	</div>
-	
-	<div id ="ContenedorDeSecciones">
+		</div>
 
-		<br><br>
-		<a href="#S1"><font size = 6> Formacion academica </font></a>
-		<br><br>
-		<a href="#S2"><font size = 6> Hobbies </font></a>
-		<br><br>
-		<a href="#S3"><font size = 6> Prácticas </font></a>
-		<br><br>
-		
-	</div>
-	
-	<div id = "ContenedorTexto" >
-	
-		<!--Esta sección describe la formación academica de Ricardo-->
-
-		<h2><a id="S1" style="color: #FF9400">Formación academica</a><a href="Documentos/MatriculaRicardo.pdf"> (Matricula) </a></h2>
+		<div id ="ContenedorDeSecciones">
+						
+			<a href="#S1"> Home</a>
 			
-		<h3><u>2011-2013 Ingenería del Software</u></h3>
-		<p>
-			Universidad Complutense de Madrid<br>
-			Actualmente en el tercer año de estudio<br>
-			Prácticas realizadas durante el curso:
+			<a href="#S2"> Horarios</a>
+			
+			<a href="#S3"> Inscribirse a concurso</a>
 			<br><br>
-			Creación de programas de gestión de información (utilizando modelos de procesos para el desarrollo).
-			Programa recreativos (Sudoku digital, simulador de guitarra, etc…)<br>
-			Creación de páginas webs<br>
-			Creación aplicaciones para móviles (Android)<br>
-		</p>
-		<h3><u>2009-2011 Bachillerato</u></h3>
-		<p>
-			Colegios Ramón Y Cajal (Madrid)
-			Bachillerato Ciencias y Tecnología
+
+		</div>
+		<center>
+		<div id="slideShowContainer">
+			<ul>
+				<li><img src="img/back_tattoo.jpg" width="604" height="453" /></li>
+				<li><img src="img/lion-half-sleeve-tattoo.jpg" width="604" height="453" /></li>
+
+			</ul>
+			<span class="button prevButton"></span>
+			<span class="button nextButton"></span>
+
+
+		</div>  </center> 
 		
-	
-	
-	</div>
-	<div id = "ContenedorInferior">
+
+
+		<div id = "ContenedorInferior">
+
+		</div>
 
 	</div>
-	
-</div>
+
 </body>
 </html>
