Add new page and fixed page format

--- a/index.html
+++ b/index.html
@@ -90,24 +90,33 @@ $(window).load(function(){
 
 </script>
 <body>
-
+	
 	<div id = "contenedorPrincipal">
 
-		<div id = "marcoSuperior">
+
+	<div id = "marcoSuperior">
 
 			<h1 id ="TituloPrincipal">Octopus Ink</h1>
 
 		</div>
-
 		<div id ="ContenedorDeSecciones">
 						
-			<a href="#S1"> Home</a>
+			<a href="index.html"> Home</a>
 			
-			<a href="#S2"> Horarios</a>
+			<a href="horarios.html"> Horarios</a>
 			
 			<a href="#S3"> Inscribirse a concurso</a>
 			<br><br>
 
+		</div>
+		<br>
+		
+
+
+		<div id="contenedorIntroduccion">
+		<h1>Octupus Ink</h1>
+		<p>En Octupus Ink encontraras todo lo que necesites sobre tatuajes y arte corporal</p>
+			
 		</div>
 		<center>
 		<div id="slideShowContainer">
@@ -120,13 +129,22 @@ $(window).load(function(){
 			<span class="button nextButton"></span>
 
 
-		</div>  </center> 
+		</div> 
+		</center> 
+
+		<div id= "contenedorEjemplos">
+
+			
+		</div>
 		
 
-
-		<div id = "ContenedorInferior">
+<div id = "ContenedorInferior">
+			Contactenos
+			<br>
+			9965555-555
 
 		</div>
+		
 
 	</div>
 
