Images and services section added

--- a/horarios.html
+++ b/horarios.html
@@ -7,15 +7,15 @@
 <script type="text/javascript" src="lib/jquery-1.11.2.js"></script>
 
 <body>
-
+	
 	<div id = "contenedorPrincipal">
 
-		<div id = "marcoSuperior">
+
+	<div id = "marcoSuperior">
 
 			<h1 id ="TituloPrincipal">Octopus Ink</h1>
 
 		</div>
-
 		<div id ="ContenedorDeSecciones">
 						
 			<a href="index.html"> Home</a>
@@ -29,17 +29,25 @@
 		<br>
 		
 
+		<table>
+			
+
+		</table>
+
 		
-
-
-		<div id = "ContenedorInferior">
-			Contactenos
+		<div id = "footer">
+			<div id = "footer_contents">
+				Contactenos
 			<br>
 			9965555-555
+
+			</div>
+			
 
 		</div>
 
 	</div>
+
 
 </body>
 </html>
