--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@ $(window).load(function(){
 
 
 		<div id="contenedorIntroduccion">
-		<h1>Octupus Ink</h1>
-		<p>En Octupus Ink encontraras todo lo que necesites sobre tatuajes y arte corporal</p>
+		<h1>Octopus Ink</h1>
+		<p>En Octopus Ink encontraras todo lo que necesites sobre tatuajes y arte corporal</p>
 			
 		</div>
 		<center>
@@ -132,21 +132,56 @@ $(window).load(function(){
 		</div> 
 		</center> 
 
-		<div id= "contenedorEjemplos">
+		<div class= "contenedorEjemplos">
+
+
+
+  		<table class="contenedorEjemplos">
+			  <tr>
+			    <td class="tituloEjemplo">Tatuajes</td>
+			    <td class="tituloEjemplo">Piercings</td>		
+			    <td class="tituloEjemplo">Arte Corporal</td>
+			  </tr>
+			  <tr> 
+
+			    <td><p class="parrafoEjemplo">Galardonados como mejores artistas de arte corporal del 2012, en Octopus Ink atendemos a los más exigentes artistas y clientes</p>
+			    	<br>
+			    	<img class= "imagenEjemplo" src="img/tatuajeLeg.jpg"></img>
+
+			    </td> 
+
+
+				 <td><p class="parrafoEjemplo">Galardonados como mejores artistas de arte corporal del 2012, en Octopus Ink atendemos a los más exigentes artistas y clientes</p>
+				    	<br>
+				    	<img class= "imagenEjemplo" src="img/piercing.jpg"></img>
+
+			    </td>
+
+
+			    <td><p class="parrafoEjemplo">Galardonados como mejores artistas de arte corporal del 2012, en Octopus Ink atendemos a los más exigentes artistas y clientes</p>
+			    	<br>
+			    	<img class= "imagenEjemplo" src="img/arteCorporal.jpg"></img>
+
+			    </td>
+			  </tr>
+		</table>
 
 			
 		</div>
 		
-
-<div id = "ContenedorInferior">
-			Contactenos
+		<div id = "footer">
+			<div id = "footer_contents">
+				Contactenos
 			<br>
 			9965555-555
 
+			</div>
+			
+
 		</div>
-		
 
 	</div>
+
 
 </body>
 </html>
