--- a/horarios.html
+++ b/horarios.html
@@ -22,7 +22,7 @@
 			
 			<a href="horarios.html"> Horarios</a>
 			
-			<a href="#S3"> Inscribirse a concurso</a>
+			<a href="concursoFormulario.html"> Inscribirse a concurso</a>
 			<br><br>
 
 		</div>
