--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ $(window).load(function(){
 			
 			<a href="horarios.html"> Horarios</a>
 			
-			<a href="#S3"> Inscribirse a concurso</a>
+			<a href="concursoFormulario.html"> Inscribirse a concurso</a>
 			<br><br>
 
 		</div>
@@ -144,21 +144,21 @@ $(window).load(function(){
 			  </tr>
 			  <tr> 
 
-			    <td><p class="parrafoEjemplo">Galardonados como mejores artistas de arte corporal del 2012, en Octopus Ink atendemos a los más exigentes artistas y clientes</p>
+			    <td class="columnaEjemplo"><p class="parrafoEjemplo">Galardonados como mejores artistas de arte corporal del 2012, en Octopus Ink atendemos a los más exigentes artistas y clientes</p>
 			    	<br>
 			    	<img class= "imagenEjemplo" src="img/tatuajeLeg.jpg"></img>
 
 			    </td> 
 
 
-				 <td><p class="parrafoEjemplo">Galardonados como mejores artistas de arte corporal del 2012, en Octopus Ink atendemos a los más exigentes artistas y clientes</p>
+				 <td class="columnaEjemplo"><p class="parrafoEjemplo">Galardonados como mejores artistas de arte corporal del 2012, en Octopus Ink atendemos a los más exigentes artistas y clientes</p>
 				    	<br>
 				    	<img class= "imagenEjemplo" src="img/piercing.jpg"></img>
 
 			    </td>
 
 
-			    <td><p class="parrafoEjemplo">Galardonados como mejores artistas de arte corporal del 2012, en Octopus Ink atendemos a los más exigentes artistas y clientes</p>
+			    <td class="columnaEjemplo"><p class="parrafoEjemplo">Galardonados como mejores artistas de arte corporal del 2012, en Octopus Ink atendemos a los más exigentes artistas y clientes</p>
 			    	<br>
 			    	<img class= "imagenEjemplo" src="img/arteCorporal.jpg"></img>
 
