--- a/concursoFormulario.html
+++ b/concursoFormulario.html
@@ -44,7 +44,7 @@
 
 					<tr><td class="informacionFormulario">NIF*</td><td><input required title="DNI" name= "DNI" type ="text"></td></tr>
 
-					<tr><td class="informacionFormulario" >Direccion*</td><td><input required title="Direccion" type ="text"  ></td></tr>
+					<tr><td class="informacionFormulario" >Direccion*</td><td><input required title="Direccion" name= "direccion" type ="text"  ></td></tr>
 
 					<tr><td class="informacionFormulario">Codigo postal*</td><td><input required title="Codigo Postal" name ="codigoPostal" type ="number"></td></tr>
 
@@ -56,9 +56,9 @@
 						<fieldset class="fieldsetPreferencia">
 							<legend>Que te gustaria hacerte</legend>
 							<br>
-							<input type = "radio" name ="especializacion" value ="Tatuajes"checked>Tatuajes<br>
-							<input type = "radio" name ="especializacion" value ="Piercing">Piercing<br>
-							<input type = "radio" name ="especializacion" value="Arte corporal">Arte corporal<br>
+							<input type = "radio" name ="preferencia" value ="Tatuajes"checked>Tatuajes<br>
+							<input type = "radio" name ="preferencia" value ="Piercing">Piercing<br>
+							<input type = "radio" name ="preferencia" value="Arte corporal">Arte corporal<br>
 						</fieldset>
 					</td>
 				</tr>
