Final style change

--- a/concursoFormulario.html
+++ b/concursoFormulario.html
@@ -30,7 +30,7 @@
 		</div>
 		<br>
 		<p class="informacionConcurso">
-			Inscribete al concurso  y participa en el sorteo de un tatuaje gratis!
+			Inscribete al concurso  y participa en el sorteo de un tatuaje gratis
 		</p>
 		<br>
 
@@ -80,7 +80,7 @@
 	<div id = "footer">
 		<div id = "footer_contents">
 			Contactenos
-			<br>
+			
 			9965555-555
 
 		</div>
