--- a/horarios.html
+++ b/horarios.html
@@ -40,13 +40,13 @@ $(document).ready(function(){
 		<br>
 					
 
-		<div id="botonHorario">Pulsa para mostrar o ocultar el horario</div>
+		<div id="botonHorario">Pulsa para mostrar u ocultar el horario</div>
 
 		<div id="contenedorDatosHorario">
 
 		<ul>
 		  <li>Lunes-Viernes 8:00h - 22:30h </li>
-		  <li>Sabados: 9:00-16:00</li>
+		  <li>Sabados: 9:00h-16:00h</li>
 		  <li>Domingos y Festivos Cerrado</li>
 		</ul>  
 
@@ -58,7 +58,7 @@ $(document).ready(function(){
 		<div id = "footer">
 			<div id = "footer_contents">
 				Contactenos
-			<br>
+			
 			9965555-555
 
 			</div>
