--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ $(window).load(function(){
 		</div> 
 		</center> 
 
-		<div class= "contenedorEjemplos">
+		
 
 
 
@@ -144,21 +144,21 @@ $(window).load(function(){
 			  </tr>
 			  <tr> 
 
-			    <td class="columnaEjemplo"><p class="parrafoEjemplo">Galardonados como mejores artistas de arte corporal del 2012, en Octopus Ink atendemos a los más exigentes artistas y clientes</p>
+			    <td class="columnaEjemplo"><p class="parrafoEjemplo">Escoja uno de nuestro disenos o le ayudamos a disenar su propio tatuaje</p>
 			    	<br>
 			    	<img class= "imagenEjemplo" src="img/tatuajeLeg.jpg"></img>
 
 			    </td> 
 
 
-				 <td class="columnaEjemplo"><p class="parrafoEjemplo">Galardonados como mejores artistas de arte corporal del 2012, en Octopus Ink atendemos a los más exigentes artistas y clientes</p>
+				 <td class="columnaEjemplo"><p class="parrafoEjemplo">Todas las perforaciones realizadas se hacen bajo el mas estricto control sanitario </p>
 				    	<br>
 				    	<img class= "imagenEjemplo" src="img/piercing.jpg"></img>
 
 			    </td>
 
 
-			    <td class="columnaEjemplo"><p class="parrafoEjemplo">Galardonados como mejores artistas de arte corporal del 2012, en Octopus Ink atendemos a los más exigentes artistas y clientes</p>
+			    <td class="columnaEjemplo"><p class="parrafoEjemplo">Galardonados como mejores artistas de arte corporal del 2012, en Octopus Ink atendemos a los mas exigentes artistas y clientes</p>
 			    	<br>
 			    	<img class= "imagenEjemplo" src="img/arteCorporal.jpg"></img>
 
@@ -166,13 +166,11 @@ $(window).load(function(){
 			  </tr>
 		</table>
 
-			
-		</div>
+		
 		
 		<div id = "footer">
 			<div id = "footer_contents">
-				Contactenos
-			<br>
+				Contactenos	
 			9965555-555
 
 			</div>
